# TheLife

./: AUTHORS  THANKS  autogen.sh  configure.ac
m4/: curses.m4
src/: CommandHandler.cpp  CommandHandler.h  Config.cpp  FileHandler.cpp  FileHandler.h  Language.cpp  Language.h  LogHandler.cpp  LogHandler.h  Main.cpp  Makefile.am  Makefile.in  Share.h  SignalDef.h  Singleton.h  Thread.cpp  Thread.h  Unit.cpp  Unit.h  config.h
src/UI/: App.cpp  App.h  Console.cpp  Interface.cpp  Interface.h  Menu.cpp  Status.cpp  UI.cpp
src/data/: life.config
src/languages/: finnish.lng  other_test.lng  russian.lng
